test/langtools/tools/javac/enum/AbstractEmptyEnum.out
AbstractEmptyEnum.java:9:8: compiler.err.does.not.override.abstract: AbstractEmptyEnum, m(), AbstractEmptyEnum
1 error
